# scrapper

./: .env.example  .gitignore  .mcp.json  CLAUDE.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
docs/: ARCHITECTURE.md  OVERVIEW.md  SCRAPE_TEST_2026-02-24.md  SCRAPE_TEST_2026-02-24_batch2.md
docs/ARCHIVE/: 2026-02-20-scraper-api-design.md  PRD.md  TEST_MODE_NOTES.md
docs/plans/: 2026-02-20-scraper-api-plan.md  2026-02-23-taxonomy-tags-embedding.md  2026-02-25-ai-analysis-quality-iter2-implementation.md  2026-03-09-audit-fixes.md  2026-03-09-pre-filter-design.md  2026-03-09-pre-filter-implementation.md  2026-03-15-memory-optimization.md  2026-03-16-async-supabase-migration.md  2026-03-16-backfill-tasks-design.md  2026-03-16-backfill-tasks-implementation.md
scripts/: find_unmatched_tags.py  regenerate_embeddings.py
src/: __init__.py  config.py  database.py  image_storage.py  log_sink.py  main.py  storage.py  utils.py
src/ai/: batch.py  batch_api.py  embedding.py  images.py  normalize.py  prompt.py  schemas.py  taxonomy.py  taxonomy_matching.py
src/api/: app.py  rate_limiter.py  schemas.py  services.py
src/cli/: fix_insights.py  reanalyze.py
src/models/: blog.py  db_types.py  task.py
src/repositories/: __init__.py  blog_repository.py  protocols.py  task_repository.py
src/scripts/: import_xlsx.py
src/worker/: ai_handler.py  blog_data.py  discover_handler.py  handlers.py  loop.py  pre_filter_handler.py  scheduler.py  scrape_handler.py
tests/: conftest.py  test_config.py  test_database.py  test_image_storage.py  test_log_sink.py  test_storage.py  test_utils.py
tests/test_ai/: conftest.py  test_batch.py  test_embedding.py  test_images.py  test_prompt.py  test_schemas.py  test_taxonomy.py
tests/test_api/: conftest.py  test_app.py  test_find_or_create_blog.py  test_rate_limiter.py  test_routes_discover.py  test_routes_pre_filter.py  test_routes_scrape.py  test_routes_tasks.py  test_schemas.py  test_services.py
tests/test_instagram/: test_client.py  test_hiker_scraper.py  test_mappers.py  test_metrics.py  test_scraper.py
tests/test_models/: test_blog.py  test_task.py
tests/test_repositories/: test_blog_repository.py  test_task_repository.py
tests/test_scripts/: test_import_xlsx.py
tests/test_worker/: test_ai_handler_regressions.py  test_blog_data.py  test_handlers.py  test_loop.py  test_pre_filter_handler.py  test_scheduler.py
