[project]
name = "scraper"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "instagrapi>=2.1",
    "supabase>=2.0",
    "storage3>=0.8",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "openai>=1.0",
    "apscheduler>=3.10,<4.0",
    "loguru>=0.7",
    "httpx>=0.27",
    "fastapi>=0.129.0",
    "uvicorn[standard]>=0.41.0",
    "hikerapi>=1.7",
    "pillow>=12.1.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-mock>=3.14",
    "ruff>=0.9.0",
    "pyright>=1.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py313"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]

[tool.pyright]
pythonVersion = "3.13"
typeCheckingMode = "standard"
